unpackaged/main/default/objects/Commission__c/fields/X5_watt_M1_Amount__c.field-meta.xml
<CustomField>
    <fullName>X5_watt_M1_Amount__c</fullName>
    <formula>CASE(   Loan_Pal__c  , "Loan Pal",  IF(Opportunity__r.Contract_Received_Confirmed_Date__c &lt;  DATE(2019,3,18) ,0, X5_Watt_Total_Commissions__c * Commission_Plan__r.Milestone_1_Percent__c),

X5_Watt_Total_Commissions__c * Commission_Plan__r.Milestone_1_Percent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$5/watt M1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>