unpackaged/main/default/objects/Commission__c/fields/X5_watt_M1_Value__c.field-meta.xml
<CustomField>
    <fullName>X5_watt_M1_Value__c</fullName>
    <label>$5/watt M1 Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>