unpackaged/main/default/objects/Commission__c/fields/X5_Watt_Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>X5_Watt_Total_Commissions__c</fullName>
    <formula>Total_Commissions__c -  Price_5_Watt__c - CT_GreenBank_AdderValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&lt;$5/Watt Total Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>