unpackaged/main/default/objects/Commission__c/fields/X5_Watt_Total_Commissions_Value__c.field-meta.xml
<CustomField>
    <fullName>X5_Watt_Total_Commissions_Value__c</fullName>
    <label>&lt;$5/Watt Total Commissions Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>