unpackaged/main/default/objects/Commission__c/validationRules/Enter_Sales_Accelerate_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_Sales_Accelerate_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Sales_Accelerate_Requested_Date__c)  = False</errorConditionFormula>
    <errorDisplayField>Sales_Accelerate_Fee__c</errorDisplayField>
    <errorMessage>Enter Sales Accelerate Fee</errorMessage>
</ValidationRule>