unpackaged/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rep_Partner__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead_Source_Type__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>