unpackaged/main/default/objects/Commission__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Rep_Partner__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead_Source_Type__c</columns>
    <columns>Opportunity_Amount__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>